--- a/MvcApp/Views/Account/Register.cshtml
+++ b/MvcApp/Views/Account/Register.cshtml
@@ -1,8 +1,7 @@
-﻿@using MvcApp.Models
+﻿@model MvcApp.Models.Account.RegisterViewModel
 
 @{
     ViewBag.Title = "Register";
 }
 
 <h2>Register</h2>
-
