--- a/MvcApp/Views/Account/Register.cshtml
+++ b/MvcApp/Views/Account/Register.cshtml
@@ -1,8 +1,14 @@
-﻿@using MvcApp.Models
+﻿@model MvcApp.Models.RegisterViewModel
 
 @{
     ViewBag.Title = "Register";
 }
 
 <h2>Register</h2>
+
+@using (Html.BeginForm("Register", "Account"))
+{
+    @Html.EditorFor(model => model.Name)
+    <button type="submit">Сохранить</button>
+}
 
