--- a/MvcApp/Views/Shared/_Layout.cshtml
+++ b/MvcApp/Views/Shared/_Layout.cshtml
@@ -18,10 +18,10 @@
                     <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.Partial("_LoginPartial")
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                </ul>
+                <ul class="nav navbar-nav"></ul>
             </div>
         </div>
     </div>
