Fix bag with links

--- a/MvcApp/Views/Account/Login.cshtml
+++ b/MvcApp/Views/Account/Login.cshtml
@@ -6,15 +6,14 @@
 
 @using (Html.BeginForm("Login", "Account"))
 {
-    <div class="container">
-        <h2> Login</h2>
+    <div class="container" id="Login">
+        <h1> Login</h1>
         <hr />
-
         <div class="row">
-            <div class="col-md-1 col-lg-1 col-sm-1 col-xs-1">
+            <div class="col-md-1 col-lg-1 col-sm-2 col-xs-3">
                 @Html.LabelFor(model => model.Login)
             </div>
-            <div class="col-md-2 col-lg-2 col-sm-2 col-xs-2">
+            <div class="col-md-1 col-lg-1 col-sm-2 col-xs-2">
                 @Html.EditorFor(model => model.Login)
             </div>
         </div>
@@ -22,16 +21,16 @@
         <br />
 
         <div class="row">
-            <div class="col-md-1 col-lg-1 col-sm-1 col-xs-1">
+            <div class="col-md-1 col-lg-1 col-sm-2 col-xs-3">
                 @Html.LabelFor(model => model.Password)
             </div>
-            <div class="col-md-2 col-lg-2 col-sm-2 col-xs-2">
+            <div class="col-md-1 col-lg-1 col-sm-2 col-xs-2">
                 @Html.EditorFor(model => model.Password)
             </div>
         </div>
 
         <br />
 
-        <div class="btn btn-success">Login</div>
-    </div>         
+        <button class="btn btn-success" type="submit" >Log In</button>
+    </div>
 }
