--- a/MvcApp/Views/Shared/_LoginPartial.cshtml
+++ b/MvcApp/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
-﻿<link href="~/Content/navigation.css" rel="stylesheet" />
+﻿<link href="~/Content/navigation.css" rel="stylesheet">
+
 @if (Request.IsAuthenticated)
 {
     <div class="b">
