--- a/MvcApp/Views/Shared/_LoginPartial.cshtml
+++ b/MvcApp/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@if (Request.IsAuthenticated)
 {
     <div>
-        Пользователь: @User.Identity.Name
+        @Html.ActionLink(@User.Identity.Name, "Account", "Account")
         @Html.ActionLink("Log Out", "Logout", "Account")
     </div>
 }
