--- a/MvcApp/Content/navigation.css
+++ b/MvcApp/Content/navigation.css
@@ -1,13 +1,3 @@
-﻿.dropdown:hover .dropdown-menu {
-    display: block;
- } /*при НАВЕДЕНИИ раскрывается*/
-
-.right {
-    float: right;
-}
-
-.b{
-    float:right;
-    padding: 3px 6px;
-    font-size: 14px;
+﻿.inline {
+    display: inline;
 }
