--- a/MvcApp/Views/Account/Login.cshtml
+++ b/MvcApp/Views/Account/Login.cshtml
@@ -1,36 +1,54 @@
 ﻿@model MvcApp.Models.Account.LoginViewModel
 
 @{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "Log in";
 }
 
-@using (Html.BeginForm("Login", "Account"))
-{
-    <div class="container" id="Login">
-        <h1> Login</h1>
-        <hr />
-        <div class="row">
-            <div class="col-md-1 col-lg-1 col-sm-2 col-xs-3">
-                @Html.LabelFor(model => model.Login)
-            </div>
-            <div class="col-md-1 col-lg-1 col-sm-2 col-xs-2">
-                @Html.EditorFor(model => model.Login)
-            </div>
-        </div>
+<h2>Login to your account</h2>
+<div class="row">
+    <div class="col-md-8">
 
-        <br />
+        @using (Html.BeginForm("Login", "Account", FormMethod.Post, new { @class = "form-horizontal" }))
+        {
+            @Html.AntiForgeryToken()
 
-        <div class="row">
-            <div class="col-md-1 col-lg-1 col-sm-2 col-xs-3">
-                @Html.LabelFor(model => model.Password)
+            <h3 style="color: red">
+                @Html.DisplayFor(model => model.Message, new { @class = "col-md-2 control-label" })
+            </h3>
+
+            <hr />
+            
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.Login, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(model => model.Login, new { @class = "form-control inline" })
+                    @Html.ValidationMessageFor(model => model.Login, "", new { @class = "text-danger" })
+                </div>
             </div>
-            <div class="col-md-1 col-lg-1 col-sm-2 col-xs-2">
-                @Html.EditorFor(model => model.Password)
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Password, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.PasswordFor(model => model.Password, new { @class = "form-control inline" })
+                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
 
-        <br />
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <div class="checkbox-inline">
+                        @Html.CheckBoxFor(model => model.RememberMe)
+                        @Html.LabelFor(model => model.RememberMe)
+                    </div>
+                </div>
+            </div>
 
-        <button class="btn btn-success" type="submit" >Log In</button>
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Log in" class="btn btn-success" />
+                </div>
+            </div>
+        }
     </div>
-}
+</div>
