--- a/MvcApp/Views/Account/Register.cshtml
+++ b/MvcApp/Views/Account/Register.cshtml
@@ -1,85 +1,68 @@
 ﻿@model MvcApp.Models.Account.RegisterViewModel
 
-
 @{
     ViewBag.Title = "Register";
 }
 
+<h2>Create a new account</h2>
+<hr />
 
-<link href="~/Content/bootstrap.css" rel="stylesheet" />
-
-@using (Html.BeginForm("Register", "Account"))
+@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal" }))
 {
-    <div class="container">
-        <h1>  Register</h1>
-         <hr />
-        <div class="row">
-            <div class="col-md-2 col-lg-2 col-sm-3" >
-                @Html.LabelFor(model => model.Login)
-            </div>
-            <div class="col-md-1 col-lg-2 col-sm-2">
-                @Html.EditorFor(model => model.Login)
-            </div>
+    @Html.AntiForgeryToken()
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Login, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(model => model.Login, new { @class = "form-control inline" })
+            @Html.ValidationMessageFor(model => model.Login, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <br />
-
-        <div class="row">
-            <div class="col-md-2 col-lg-2 col-sm-3">
-                @Html.LabelFor(model => model.Password)
-            </div>
-            <div class="col-md-1 col-lg-2 col-sm-2">
-                @Html.EditorFor(model => model.Password)
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Password, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.PasswordFor(model => model.Password, new { @class = "form-control inline" })
+            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <br />
-
-        <div class="row">
-            <div class="col-md-2 col-lg-2 col-sm-3">
-                @Html.LabelFor(model => model.ConfirmPassword)
-            </div>
-            <div class="col-md-1 col-lg-2 col-sm-2">
-                @Html.EditorFor(model => model.ConfirmPassword)
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.ConfirmPassword, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.PasswordFor(model => model.ConfirmPassword, new { @class = "form-control inline" })
+            @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <br />
-
-        <div class="row">
-            <div class="col-md-2 col-lg-2 col-sm-3">
-                @Html.LabelFor(model => model.Email)
-            </div>
-            <div class="col-md-1 col-lg-2 col-sm-2">
-                @Html.EditorFor(model => model.Email)
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Email, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(model => model.Email, new { @class = "form-control inline" })
+            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <br />
-
-        <div class="row">
-            <div class="col-md-2 col-lg-2 col-sm-3">
-                @Html.LabelFor(model => model.Name)
-            </div>
-            <div class="col-md-1 col-lg-2 col-sm-2">
-                @Html.EditorFor(model => model.Name)
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Name, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(model => model.Name, new { @class = "form-control inline" })
+            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <br />
-
-        <div class="row">
-            <div class="col-md-2 col-lg-2 col-sm-3">
-                @Html.LabelFor(model => model.Surname)
-            </div>
-            <div class="col-md-1 col-lg-2 col-sm-2">
-                @Html.EditorFor(model => model.Surname)
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Surname, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(model => model.Surname, new { @class = "form-control inline" })
+            @Html.ValidationMessageFor(model => model.Surname, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <br />
-
-        <button class="btn btn-success" type="submit">Log In</button>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" class="btn btn-success" value="Register" />
+        </div>
     </div>
 
 }
