--- a/MvcApp/Views/Shared/_Layout.cshtml
+++ b/MvcApp/Views/Shared/_Layout.cshtml
@@ -38,6 +38,8 @@
 
     <script src="@Url.Content("~/Scripts/jquery-1.11.1.min.js")"
             type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/bootstrap.js")"
+            type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery.validate.js")"
             type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")"
