Add description to treeview.

--- a/MvcApp/Views/CatalogView/ChildNode.cshtml
+++ b/MvcApp/Views/CatalogView/ChildNode.cshtml
@@ -1,16 +1,17 @@
 ﻿@model IEnumerable<LogicLayer.CatalogManager.TreeView>
 @foreach (var treeNode in Model)
 {
-    <ul>
+    <ul id="treeChild">
         @if (treeNode != null)
         { 
-            <li><a href="#">
-                @treeNode.NodeName
-            </a>
+            <li><a href="#" onclick="$('#disc').html('@treeNode.NodeDescription')">
+    @treeNode.NodeName
+</a>
                 @if (treeNode.ChildNode.Count > 0)
                 {
                     @Html.Partial("ChildNode", treeNode.ChildNode)
                 }
+                <button type="button" id="" >123</button>
             </li> 
         }
     </ul>
