--- a/MvcApp/Views/Shared/_Layout.cshtml
+++ b/MvcApp/Views/Shared/_Layout.cshtml
@@ -38,10 +38,11 @@
     <script src="~/Scripts/bootstrap.min.js"></script>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jstree.js")" type="text/javascript"></script>
-    <link href="../../Scripts/themes/style.css" rel="stylesheet" type="text/css" />
+    <link href="../../Scripts/themes/default/style.min.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript">
         $(function () {
-            $('#catalog').jstree();
+            $('#catalog')
+   .jstree();
         });
     </script>
 </body>
