--- a/MvcApp/Views/Catalog/Index.cshtml
+++ b/MvcApp/Views/Catalog/Index.cshtml
@@ -1,7 +1,10 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Catalog";
 }
 
-<h2>Catalog</h2>
+<div class="container body-content">
+    <h1>Catalog</h1>
+    <hr />
+</div>
 
