--- a/MvcApp/Views/Home/Index.cshtml
+++ b/MvcApp/Views/Home/Index.cshtml
@@ -1,1 +1,9 @@
-﻿<h1>Home page</h1>
+﻿
+@{
+    ViewBag.Title = "Home page";
+}
+
+<div class="container body-content">
+    <h1>Home page</h1>
+    <hr />
+</div>
