--- a/MvcApp/Views/Shared/_Layout.cshtml
+++ b/MvcApp/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/Site.css" rel="stylesheet" />
     <link href="~/Content/navigation.css" rel="stylesheet" />
+    <link href="~/Content/dashboard.css" rel="stylesheet" />
 
 </head>
 <body>
@@ -28,13 +29,7 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+    @RenderBody()
 
     <script src="@Url.Content("~/Scripts/jquery-1.11.1.min.js")"
             type="text/javascript"></script>
