Add description to view record.

--- a/MvcApp/Views/CatalogView/ChildNode.cshtml
+++ b/MvcApp/Views/CatalogView/ChildNode.cshtml
@@ -4,15 +4,26 @@
     <ul id="treeChild">
         @if (treeNode != null)
         { 
-            <li><a href="#" onclick="$('#disc').html('@treeNode.NodeDescription')">
+            <li><a href="#" onclick="view('@(treeNode.NodeDescription)',@(Json.Encode(treeNode.IsRecord)), @(treeNode.Rec.ID))">
     @treeNode.NodeName
 </a>
                 @if (treeNode.ChildNode.Count > 0)
                 {
                     @Html.Partial("ChildNode", treeNode.ChildNode)
                 }
-                <button type="button" id="" >123</button>
             </li> 
         }
     </ul>
 } 
+
+<script>
+    function view(description, isRecord, record) {
+        if (!isRecord)
+            $('#disc').html(description);
+        else
+            $.get('@Url.Action("Details", "CatalogView")', { id: record }, function (data) {
+                $('#disc').html(data);
+            });
+
+    }
+</script>
