--- a/MvcApp/Views/CatalogView/Index.cshtml
+++ b/MvcApp/Views/CatalogView/Index.cshtml
@@ -6,11 +6,23 @@
 <div id="catalog">
     <ul id="tree">
         <li>
-            <a href="#" onclick="$('#disc').html('@Model.NodeDescription')">@Model.NodeName</a>
+            <a href="#" onclick="myfunction()">@Model.NodeName</a>
             @Html.Partial("ChildNode", Model.ChildNode)
         </li>
     </ul>
 </div> 
 <div id="disc">
-
 </div>
+
+<script>
+    function myfunction() {
+        $('#disc').html('@Model.NodeDescription')
+    }
+</script>
+
+<style>
+    #disc
+    {
+
+    }
+</style>
