Description view page with ajax.

--- a/MvcApp/Views/CatalogView/ChildNode.cshtml
+++ b/MvcApp/Views/CatalogView/ChildNode.cshtml
@@ -4,9 +4,13 @@
     <ul id="treeChild">
         @if (treeNode != null)
         { 
-            <li><a href="#" onclick="view('@(treeNode.NodeDescription)',@(Json.Encode(treeNode.IsRecord)), @(treeNode.Rec.ID))">
-    @treeNode.NodeName
-</a>
+            <li>
+                    @Ajax.ActionLink(String.Format("{0}",treeNode.NodeName), "Details", new { id = treeNode.Rec.ID, description = treeNode.NodeDescription }, new AjaxOptions()
+{
+    HttpMethod = "GET",
+    UpdateTargetId = "disc",
+    InsertionMode = InsertionMode.Replace
+})
                 @if (treeNode.ChildNode.Count > 0)
                 {
                     @Html.Partial("ChildNode", treeNode.ChildNode)
@@ -15,15 +19,3 @@
         }
     </ul>
 } 
-
-<script>
-    function view(description, isRecord, record) {
-        if (!isRecord)
-            $('#disc').html(description);
-        else
-            $.get('@Url.Action("Details", "CatalogView")', { id: record }, function (data) {
-                $('#disc').html(data);
-            });
-
-    }
-</script>
