--- a/MvcApp/Views/Shared/_Layout.cshtml
+++ b/MvcApp/Views/Shared/_Layout.cshtml
@@ -47,6 +47,10 @@
             type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")"
             type="text/javascript"></script>
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+
+    <script src="~/Scripts/jquery-ui-1.11.2.js"></script>
+    <link href="~/Scripts/themes/jquery-ui.css" rel="stylesheet" />
     @RenderSection("scripts", required: false)
 </body>
 </html>
