--- a/MvcApp/Views/Account/Account.cshtml
+++ b/MvcApp/Views/Account/Account.cshtml
@@ -1,9 +1,34 @@
-﻿@model MvcApp.Models.Account.AccountViewModel
+﻿@using LogicLayer
+@model MvcApp.Models.Account.AccountViewModel
 
 @{
-    Layout = "~/Views/Shared/_AdminAccount.cshtml";
+    ISecurityHelper _securityHelper = ViewBag.SecurityHelper;
+
+    bool IsAdmin = _securityHelper.GetRole(User.Identity.Name) == "Admin";
+
+    if (IsAdmin)
+    {
+        Layout = "~/Views/Shared/_AdminAccount.cshtml";
+    }
+    else
+    {
+        Layout = "~/Views/Shared/_Layout.cshtml";
+    }
+
     ViewBag.Title = "Account";
 }
 
-<h2 class="page-header">Overview</h2>
+@if (!IsAdmin)
+{
+    <div class="container body-content">
+        @Html.Partial("_Account")
+    </div>
+}
+else
+{
+    @Html.Partial("_Account")
+}
+
+
+
 
