--- a/MvcApp/Views/Account/Login.cshtml
+++ b/MvcApp/Views/Account/Login.cshtml
@@ -3,52 +3,53 @@
 @{
     ViewBag.Title = "Log in";
 }
+<div class="container body-content">
+    <h2>Login to your account</h2>
+    <div class="row">
+        <div class="col-md-8">
 
-<h2>Login to your account</h2>
-<div class="row">
-    <div class="col-md-8">
+            @using (Html.BeginForm("Login", "Account", FormMethod.Post, new { @class = "form-horizontal" }))
+            {
+                @Html.AntiForgeryToken()
 
-        @using (Html.BeginForm("Login", "Account", FormMethod.Post, new { @class = "form-horizontal" }))
-        {
-            @Html.AntiForgeryToken()
+                <h3 style="color: red">
+                    @Html.DisplayFor(model => model.Message, new { @class = "col-md-2 control-label" })
+                </h3>
 
-            <h3 style="color: red">
-                @Html.DisplayFor(model => model.Message, new { @class = "col-md-2 control-label" })
-            </h3>
+                <hr />
 
-            <hr />
-            
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(model => model.Login, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.TextBoxFor(model => model.Login, new { @class = "form-control inline" })
-                    @Html.ValidationMessageFor(model => model.Login, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Password, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.PasswordFor(model => model.Password, new { @class = "form-control inline" })
-                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <div class="checkbox-inline">
-                        @Html.CheckBoxFor(model => model.RememberMe)
-                        @Html.LabelFor(model => model.RememberMe)
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Login, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(model => model.Login, new { @class = "form-control inline" })
+                        @Html.ValidationMessageFor(model => model.Login, "", new { @class = "text-danger" })
                     </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Log in" class="btn btn-success" />
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Password, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.PasswordFor(model => model.Password, new { @class = "form-control inline" })
+                        @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-            </div>
-        }
+
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <div class="checkbox-inline">
+                            @Html.CheckBoxFor(model => model.RememberMe)
+                            @Html.LabelFor(model => model.RememberMe)
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Log in" class="btn btn-success" />
+                    </div>
+                </div>
+            }
+        </div>
     </div>
 </div>
