--- a/MvcApp/Views/Shared/_AdminAccount.cshtml
+++ b/MvcApp/Views/Shared/_AdminAccount.cshtml
@@ -9,20 +9,17 @@
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
                 <li>
-                    <a href="Account">
-                        Overview
-                    </a>
+                    @Html.ActionLink("Overview","Account","Account")
                 </li>
                 <li>
-                    <a href="Users">
-                        Users
-                    </a>
+                    @Html.ActionLink("Users","Users","Account")
                 </li>
                 <li>
-                    <a href="#">Reports</a>
+                    <a href="">Reports</a>
                 </li>
             </ul>
         </div>
+
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             @RenderBody()
         </div>
