--- a/MvcApp/Views/Shared/_Layout.cshtml
+++ b/MvcApp/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <script src="~/Scripts/angular-animate.js"></script>
     <link href="~/Content/navigation.css" rel="stylesheet" />
     <link href="~/Content/dashboard.css" rel="stylesheet" />
 </head>
@@ -41,15 +42,15 @@
     <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")"
             type="text/javascript"></script>
     <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
-    <script src="~/Scripts/jquery-ui-1.11.2.js"></script>
-    
+   
     <script src="~/Scripts/myScripts/angular.js"></script>
     <script src="~/Scripts/myScripts/angular.treeview.js"></script>
+    <script src="~/Scripts/myScripts/tabs.js"></script>
     <script src="~/Scripts/myScripts/App.js"></script>
     <script src="~/Scripts/myScripts/catalogService.js"></script>
     <script src="~/Scripts/myScripts/catalogCtrl.js"></script>
+    <script src="~/Scripts/ui.bootstrap/ui-bootstrap-custom-tpls-0.12.0.js"></script>
 
-    <link href="~/Scripts/themes/jquery-ui.css" rel="stylesheet" />
     <link href="~/Scripts/myCSS/treeview.css" rel="stylesheet" />
     @RenderSection("scripts", required: false)
 </body>
